--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,14 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+  padding-right: .5rem;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
