--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -18,7 +18,7 @@ max-width: 1000px;
 background: white;
 display: grid;
 grid-template-columns: repeat(2,1fr);
-gap: 30px;
+gap: 50px;
 padding: 40px;
 border-radius: 20px;
 }
@@ -26,7 +26,7 @@ border-radius: 20px;
 .inputsContainer{
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 
 
@@ -104,7 +104,7 @@ text-align: end;
 .customInput{
   height: 50px;
   font-size: 20px;
-  max-width: 120px;
+  max-width: 100%;
   width: fit-content;
   color: var(--very-dark-cyan);
   font-weight: bold;
@@ -116,9 +116,20 @@ text-align: end;
   font-size: 1rem;
 }
 
+.peopleHeaderContainer{
+  display: flex;
+  justify-content: space-between;
+}
+
+.peopleHeaderContainer > p{
+  color: red;
+  font-size: 1.1rem;
+}
+
 .resultsContainer{
   color: white;
   padding: 35px;
+  min-width: 400px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -150,7 +161,11 @@ text-align: end;
   font-size: 2rem;
   font-weight: bold;
   color: var(--app-background);
+  max-width: 210px;
+  overflow: auto;
 }
+
+
 
 .tipInfo > h1{
   font-size: 1rem;
@@ -160,6 +175,7 @@ text-align: end;
 @media  (max-width:768px) {
   .card{
     width: 90%;
+    gap: 20px;
     display: flex;
     flex-direction: column;
   }
@@ -167,4 +183,10 @@ text-align: end;
   .inputsContainer{
     flex-direction: column;
   }
+
+  .tips{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+  }
+
 }
