--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -104,7 +104,7 @@ text-align: end;
 .customInput{
   height: 50px;
   font-size: 20px;
-  max-width: 100%;
+  max-width: 100px;
   width: fit-content;
   color: var(--very-dark-cyan);
   font-weight: bold;
