--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
   --dark-grayish-cyan:hsl(186, 14%, 43%);
   
   --very-dark-cyan:hsl(183, 100%, 15%);
-  --very-light-grayish: hsl(189, 41%, 97%);
+  --very-light-grayish: rgba(196,228,231,255);
 
 }
 
